--- a/InfoWeb/Dockerfile
+++ b/InfoWeb/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 
 # Copia el archivo de requisitos y lo instala en el contenedor
 COPY requirements.txt /app/
+RUN ls -al /app              # Listar todos los archivos y directorios en /app
 RUN pip install -r requirements.txt
 
 # Copia todo el contenido de tu proyecto al contenedor
